--- a/slides/slides_31.html
+++ b/slides/slides_31.html
@@ -39,6 +39,17 @@ class: center, middle, inverse, title-slide
 
 
 
+### Housekeeping
+
+- Managing homework assignments
+  - Look over the homework early in the week
+  - If you spend `\(&gt;30\)` minutes without making progress, go to stack overflow
+  - Use office hours, that&#39;s why they are on Thursday evenings
+  
+- We&#39;ll use LaTeX on homework this week--check explainer on GitHub
+
+---
+
  
 # What do we do with data
 
@@ -686,7 +697,7 @@ Flipping two coins event space:
 S &amp; = \{\emptyset, \\
 &amp;\{HH\}, \{HT\},\{TH\}, \{TT\},\\
 &amp;\{HH, HT\}, \{HH, TH\},\{HH, TT\}, \{HT, TH\}, \{HT, TT\}, \{TH, TT\}\\
-&amp; \{HH, HT, TH\}, \{HH, HT, TT\}, \{HH TH, TT\}, \{HT, TH, TT\},\\
+&amp; \{HH, HT, TH\}, \{HH, HT, TT\}, \{HH, TH, TT\}, \{HT, TH, TT\},\\
 &amp;\{HH, HT, TH, TT\} \}
 \end{align}$$`
 
